Fixing #1. Trying to fix submodule cloning problem.

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,7 +9,7 @@ endif
 
 PROGS = test construct scan
 
-CXX = /home/rcf-40/mengzhou/panfs/tools/gcc-5.3.0/bin/g++
+CXX = g++
 CXXFLAGS = -Wall -fmessage-length=50 -std=c++11 -static-libstdc++
 OPTFLAGS = -O2
 DEBUGFLAGS = -g
@@ -48,6 +48,8 @@ install: $(PROGS)
 $(PROGS): $(addprefix $(SMITHLAB_CPP)/, smithlab_utils.o smithlab_os.o \
   	OptionParser.o GenomicRegion.o)\
   	matrix_utils.o ProfileHMM.o
+
+#test: MultiProfileHMM.o
 
 %.o: %.cpp %.hpp
 	$(CXX) $(CXXFLAGS) -c -o $@ $< $(INCLUDEARGS)
