--- a/src/Makefile
+++ b/src/Makefile
@@ -33,9 +33,9 @@ ifeq "$(shell uname)" "Darwin"
 CXXFLAGS += -arch x86_64
 INCLUDEARGS += -I/usr/local/include
 LIBS += -L/usr/local/lib
-ifeq "$(shell if [ `sysctl -n kern.osrelease | cut -d . -f 1` -ge 13 ];\
-              then echo 'true'; fi)" "true"
-CXXFLAGS += -stdlib=libstdc++
+#ifeq "$(shell if [ `sysctl -n kern.osrelease | cut -d . -f 1` -ge 13 ];\
+#              then echo 'true'; fi)" "true"
+#CXXFLAGS += -stdlib=libstdc++
 endif
 endif
 
