--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,7 @@ endif
 PROGS = test construct scan multiscan fisher fit
 
 CXX = g++
-CXXFLAGS = -Wall -fmessage-length=50 -std=c++11
+CXXFLAGS = -Wall -fmessage-length=50 -std=c++11 -fopenmp
 OPTFLAGS = -O2
 DEBUGFLAGS = -g
 
