--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "smithlab_cpp"]
 	path = smithlab_cpp
-	url = https://github.com/smithlabcode/smithlab_cpp.git
+	url = git@github.com:smithlabcode/smithlab_cpp.git
